# pg_forge_cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-05-11-clone-via-pg-basebackup.md  2026-05-11-foundation-and-create.md  2026-05-11-snapshot-and-restore.md  2026-05-12-bug-fix-sweep.md  2026-05-12-plan-4-upgrade-rotate-ls-status.md  2026-05-12-plan-5-tui.md
src/: cli.rs  error.rs  lib.rs  main.rs  ports.rs  time.rs
src/commands/: clone.rs  create.rs  destroy.rs  dump.rs  ls.rs  mod.rs  reconfigure.rs  resize.rs  restore.rs  rotate.rs  schedule.rs  self_update.rs  smart.rs  snapshot.rs  snapshots.rs  status.rs  upgrade.rs
src/config/: global.rs
src/disk/: health.rs  mod.rs
src/docker/: bollard_engine.rs  cleanup.rs  clone_entrypoint.rs  engine.rs  image.rs  mod.rs  restore_entrypoint.rs  upgrade_entrypoint.rs  wait.rs
src/domain/: instance.rs  mod.rs  platform.rs  preset.rs  snapshot.rs
src/pgbackrest/: conf.rs  mod.rs  parse.rs  pgpass.rs
src/postgres/: conf.rs  hba.rs  init_sql.rs  mod.rs
src/smart/: cache.rs  check.rs  install.rs  installed.rs  mod.rs  types.rs
src/state/: instance.rs  mod.rs  snapshots.rs
src/tui/: app.rs  clipboard.rs  events.rs  mod.rs  (+2 more)
tests/: cli_banner_test.rs  cli_smart_banner_test.rs  clone_e2e_test.rs  clone_entrypoint_test.rs  create_e2e_test.rs  create_nobackup_e2e_test.rs  disk_health_test.rs  domain_snapshot_test.rs  dump_test.rs  global_config_test.rs  instance_state_test.rs  ls_render_test.rs  pg_hba_test.rs  pgbackrest_conf_test.rs  pgbackrest_parse_test.rs  pgpass_test.rs  platform_test.rs  ports_test.rs  postgres_conf_test.rs  postgres_init_sql_test.rs  preset_test.rs  restore_entrypoint_test.rs  restore_test.rs  rotate_e2e_test.rs  schedule_systemd_test.rs  schedule_test.rs  smart_cache_test.rs  smart_e2e_test.rs  smart_install_test.rs  smart_installed_test.rs  smart_parsing_test.rs  smart_types_test.rs  snapshot_due_test.rs  snapshot_restore_e2e_test.rs  snapshots_pitr_test.rs  state_snapshots_test.rs  status_render_test.rs  time_test.rs  tui_actions_modal_test.rs  tui_bottom_render_test.rs  (+8 more)
(+33 files in other folders)
