[package]
name = "pgforge"
version = "0.1.22"
edition = "2024"
description = "RDS-Single-AZ-equivalent provisioner for hardened PostgreSQL on a single host"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "pgforge"
path = "src/lib.rs"

[[bin]]
name = "pgforge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "process", "net", "time"] }
bollard = "0.21"
jiff = "0.2"
directories = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
async-trait = "0.1"
indoc = "2"
regex = "1"
tar = "0.4"
serde_json = "1.0.149"
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
